--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start" : "node src/index.js",
     "dev": "nodemon --inspect src/index.js"
   },
   "repository": {
