--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start" : "node src/index.js",
+    "start": "node src/index.js",
     "dev": "nodemon --inspect src/index.js"
   },
   "repository": {
@@ -24,7 +24,8 @@
     "express-handlebars": "^4.0.0",
     "mongoose": "^5.9.6",
     "mongoose-validator": "^2.1.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "socket.io": "^2.3.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
